# xoptpy

./: .gitignore  DEVELOPMENT.md  LICENSE  Makefile  README.md  ROADMAP.md  debug_full_flow.py  debug_react.py  debug_react2.py  debug_react3.py  openapi.yaml  package.json  pyproject.toml  run_react.py  test_react.py  test_xopt_functionality.py  test_xopt_simple.py  xopt_main.py
.github/: RELEASE.md
.github/workflows/: deploy-docs.yml  deploy.yml  release.yml  test-deploy.yml  test-docs.yml  test.yml
.xopt/: deps.toml  math-tutor-react.toml  precise-calc-react.toml  xopt-calculator.toml  xopt-react.toml
docs/: DEPLOYMENT.md  README_YAML.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/.docusaurus/: client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
docs/.docusaurus/docusaurus-plugin-content-blog/default/: blog-post-list-prop-default.json  blogMetadata-default.json  site-blog-2019-05-28-first-blog-post-md-e27.json  site-blog-2019-05-29-long-blog-post-md-736.json  site-blog-2021-08-01-mdx-blog-post-mdx-593.json  site-blog-2021-08-26-welcome-index-md-d9f.json
docs/.docusaurus/docusaurus-plugin-content-blog/default/p/: blog-archive-f05.json
docs/.docusaurus/docusaurus-plugin-content-docs/default/: __mdx-loader-dependency.json  site-docs-api-client-md-c1b.json  site-docs-api-overview-md-65d.json  site-docs-cli-usage-md-b08.json  site-docs-creating-modules-md-d6e.json  site-docs-getting-started-md-d58.json  site-docs-intro-md-0e3.json  site-docs-tutorial-basics-congratulations-md-822.json  site-docs-tutorial-basics-create-a-blog-post-md-533.json  site-docs-tutorial-basics-create-a-document-md-1e4.json  site-docs-tutorial-basics-create-a-page-md-5c8.json  site-docs-tutorial-basics-deploy-your-site-md-f55.json  site-docs-tutorial-basics-markdown-features-mdx-18c.json  site-docs-tutorial-extras-manage-docs-versions-md-dff.json  site-docs-tutorial-extras-translate-your-site-md-e44.json
docs/.docusaurus/docusaurus-plugin-content-docs/default/p/: docs-175.json
docs/.docusaurus/docusaurus-plugin-content-pages/default/: site-src-pages-markdown-page-md-393.json
docs/docs/: cli-usage.md  creating-modules.md  getting-started.md  intro.md  working-with-tools.md
docs/docs/api/: client.md  exceptions.md  models.md  overview.md
docs/static/: CNAME
examples/modules/calculator/: README.md  calculator.py  pyproject.toml  xopt.yaml
examples/modules/react/: README.md  pyproject.toml  react.py  run_react.py  xopt.yaml
examples/modules/react-custom/: xopt.yaml
test_data/: data_validator_tool.yaml  sentiment_module.yaml  simple_module.yaml  text_cleaner_module.yaml  web_scraper_tool.yaml
tests/: test_basic.py
xopt/: __init__.py  __main__.py  cli.py  client.py  decorators.py  instance.py  llm.py  models.py  registry.py  runner.py  utils.py
xopt/commands/: __init__.py  dev.py  init.py  install.py  list.py  package.py  run.py  sync.py  uninstall.py
xoptpy/: __init__.py  cli.py  client.py  config.py  exceptions.py  models.py
xoptpy/testing/: __init__.py  mock_dependencies.py  test_runner.py
