[project]
name = "calculator"
version = "0.1.0"
description = "Simple calculator module for xopt"
authors = [
    {name = "Jake Derry"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "xopt @ file:///mnt/c/Users/jaked/Documents/dev/xopt/xoptpy"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"