[project]
name = "react"
version = "0.1.0"
description = ""
authors = [
    {name = "Jake Derry"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "xoptpy" 
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
xoptpy = {path = "../../..", develop = true}
